--- a/package.json
+++ b/package.json
@@ -38,9 +38,12 @@
     "@radix-ui/react-toggle-group": "^1.1.11",
     "@radix-ui/react-tooltip": "^1.2.8",
     "@tiptap/extension-bullet-list": "^2.10.2",
+    "@tiptap/extension-color": "^2.10.2",
     "@tiptap/extension-font-family": "^2.10.2",
     "@tiptap/extension-heading": "^2.10.2",
+    "@tiptap/extension-highlight": "^2.10.2",
     "@tiptap/extension-image": "^2.10.2",
+    "@tiptap/extension-link": "^2.10.2",
     "@tiptap/extension-list-item": "^2.10.2",
     "@tiptap/extension-ordered-list": "^2.10.2",
     "@tiptap/extension-table": "^2.10.2",
@@ -49,6 +52,7 @@
     "@tiptap/extension-table-row": "^2.10.2",
     "@tiptap/extension-task-item": "^2.10.2",
     "@tiptap/extension-task-list": "^2.10.2",
+    "@tiptap/extension-text-align": "^2.10.2",
     "@tiptap/extension-text-style": "^2.10.2",
     "@tiptap/extension-underline": "^2.10.2",
     "@tiptap/pm": "^2.10.2",
@@ -64,9 +68,11 @@
     "next": "^15.0.3",
     "next-themes": "^0.4.6",
     "react": "^19.0.0-rc-66855b96-20241106",
+    "react-color": "^2.19.3",
     "react-day-picker": "^9.11.2",
     "react-dom": "^19.0.0-rc-66855b96-20241106",
     "react-hook-form": "^7.67.0",
+    "react-icons": "^5.3.0",
     "react-resizable-panels": "^3.0.6",
     "recharts": "^2.15.4",
     "sonner": "^2.0.7",
@@ -80,6 +86,7 @@
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
+    "@types/react-color": "^3.0.12",
     "@types/react-dom": "^18",
     "eslint": "^8",
     "eslint-config-next": "15.0.3",
